samples/_failures_safe/1761657071_91c83f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22ccbe8e.c: In function ‘main’:
./samples/SAFE/__tmp_22ccbe8e.c:154:9: error: expected expression at end of input
  154 |         if (analyzer.line_count > 100)
      |         ^~
./samples/SAFE/__tmp_22ccbe8e.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_22ccbe8e.c:154:9: error: expected declaration or statement at end of input
